# ai-annotator

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cli.py  completions.py  config.py  mock.py  prompt_utils.py  providers.py  pyproject.toml  ruff.toml  run_api.py  ui.ipynb
assets/: formatter.yml  modifiers.yml  output_formatter.yml  parser_templates.yml  prompt_templates.yml  providers.yml  tech_templates.yml  techniques.yml  views.yml
atap_llm_classifier/: __init__.py  assets.py  cli.py  completions.py  config.py  controller.py  core.py  errors.py  litellm_utils.py  models.py  output_formatter.py  pipeline.py  ratelimiters.py  settings.py
atap_llm_classifier/formatter/: __init__.py  formatter.py  models.py
atap_llm_classifier/modifiers/: modifiers.py
atap_llm_classifier/provideres/: azure_open_ai.py  open_ai.py  providers.py
atap_llm_classifier/providers/: azure_open_ai.py  ollama.py  open_ai.py  openai_.py  providers.py
atap_llm_classifier/techniques/: __init__.py  base.py  cot.py  fewshot.py  parsers.py  techniques.py  zeroshot.py
atap_llm_classifier/techniques/schemas/: __init__.py  cot.py  fewshot.py  zeroshot.py
atap_llm_classifier/techniques/templates/: __init__.py  cot.py  zeroshot.py
atap_llm_classifier/utils/: __init__.py  litellm_.py  prompt.py  sanity.py  utils.py
atap_llm_classifier/views/: __init__.py  classification.py  classifier.py  classifier_config.py  entry.py  main.py  model_config.py  notify.py  providers.py  settings.py  tabs_controller.py  techniques.py  utils.py
classifier_fastapi/: __init__.py  assets.py  auth.py  job_manager.py  ratelimiters.py  settings.py
classifier_fastapi/api/: dependencies.py  main.py  models.py
classifier_fastapi/core/: config.py  core.py  cost.py  models.py  pipeline.py
classifier_fastapi/formatter/: formatter.py  models.py
classifier_fastapi/modifiers/: __init__.py  modifiers.py  self_consistency.py
classifier_fastapi/providers/: ollama.py  providers.py
classifier_fastapi/techniques/: __init__.py  base.py  cot.py  fewshot.py  techniques.py  zeroshot.py
classifier_fastapi/utils/: litellm_.py  prompt.py  utils.py
docs/: index.html
provideres/: open_ai.py  providers.py
streamlit_app/: api_client.py  app.py  schema_templates.py  utils.py
techniques/: cot.py  techniques.py
tests/: conftest.py  debug_schema.py  example_dataset.csv  example_run.sh  example_run_few_shot.sh  example_run_reason.sh  example_user_schema.json  example_user_schema_fewshot.json  example_user_schema_reason.json  test_assets.py  test_cost_estimation_real.py  test_fastapi_auth.py  test_fastapi_classify.py  test_fastapi_cost_estimation.py  test_fastapi_health.py  test_fastapi_integration.py  test_fastapi_jobs.py  test_fastapi_models.py  test_fastapi_reasoning.py  test_fewshot.py  test_pipeline.py  test_providers.py  test_reasoning_features.py  test_reasoning_integration.py
views/: model_config.py  techniques.py
(+29 files in other folders)
