[tool.poetry]
name = "atap-llm-classifier"
version = "0.1.0"
description = ""
authors = ["Huen Chan <huen.chan@sydney.edu.au>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
panel = "^1.3.8"
pyyaml = "^6.0.1"
openai = "^1.13.3"
pydantic-settings = "^2.2.1"
ipykernel = "^6.29.3"
litellm = "^1.33.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
jupyterlab-vim = "^4.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["**/*.py", "**/pyproject.toml"]
exclude = [
    ".venv",
    ".ruff_cache",
    "**/site-packages",
    ".git",
]
line-length = 88    # same as black
indent-width = 4 # same as black

[tool.ruff.lint]
ignore = [
    "F841", # allow unused variable
    "F401", # allow unused imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
