[tool.poetry]
name = "atap-classifier-api"
version = "0.1.0"
description = "FastAPI microservice for ATAP LLM text classification"
authors = ["Sebastian Haan"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyyaml = "^6.0.1"
openai = "^1.59.7"
pydantic = "^2.0.0"
pydantic-settings = "^2.2.1"
litellm = "^1.58.2"
loguru = "^0.7.2"
pandas = "^2.0.0"
tiktoken = "^0.8.0"
# FastAPI dependencies
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
streamlit = "^1.28.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pytest = "^8.2.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: integration tests requiring real API keys",
    "slow: slow running tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
